[package]
name = "RTerm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tokio = { version = "1.0", features = ["full"] }
google-calendar3 = "5.0"
serde = { version = "1.0", features = ["derive"] }
hyper = "0.14"
hyper-tls = "0.5"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
